implement debugfs interface to invoke SMC calls from userland

--- a/Kconfig
+++ b/Kconfig
@@ -1,7 +1,7 @@
 # Amlogic DEBUG
 #
-config AML_REG_ACCESS
-    bool "Amlogic register access from userspace support"
-    default n
+config AML_SMC_ACCESS
+    bool "Amlogic SMC call from userspace support"
+    default m
     help
       This is the Amlogic debug sysfs interface driver using debugfs interface
